clang/test/CodeGen/aie/aie2/aie2-unsupported-operator-accumulators.cpp
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py
//===- aie2-unsupported-operator-accumulators.cpp ---------------*- C++ -*-===//
//
// This file is licensed under the Apache License v2.0 with LLVM Exceptions.
// See https://llvm.org/LICENSE.txt for license information.
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// (c) Copyright 2023-2024 Advanced Micro Devices, Inc. or its affiliates
//
//===----------------------------------------------------------------------===//
// RUN: not %clang -O1 %s --target=aie2 -ferror-limit=100 -S -emit-llvm -o - 2>&1 | FileCheck %s

// CHECK: error: cannot compile this operator for accumulator type yet
v8accfloat test_operator_plus_accfloat(v8accfloat a, v8accfloat b) {
  return a + b;
}
